# dynapanel

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  test.yml
api/: index.html
docs/: api.md  getting-started.md  index.md
docs/images/: summary_example.html
docs/replications/: arellano-bond-1991.md
examples/: arellano_bond_1991.py  quickstart.py
getting-started/: index.html
replications/arellano-bond-1991/: index.html
scripts/: fetch_abdata.py  xtabond2_reference.do
search/: search_index.json
src/dynapanel/: __init__.py  _data.py  _diagnostics.py  _formula.py  _gmm.py  _instruments.py  _results.py  _simulate.py  _summary.py  _windmeijer.py
tests/: test_data.py  test_formula.py  test_gmm.py  test_replication_ab1991.py
tests/fixtures/: ab1991_reference.template.json
