[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynapanel"
version = "0.1.1"
description = "Modern dynamic panel data models for Python: Arellano-Bond, Blundell-Bond, system & difference GMM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hatef Tabbakhian", email = "tabbakhianhatef@gmail.com" }]
maintainers = [{ name = "Hatef Tabbakhian", email = "tabbakhianhatef@gmail.com" }]
keywords = [
    "econometrics",
    "panel data",
    "GMM",
    "Arellano-Bond",
    "Blundell-Bond",
    "dynamic panel",
    "xtabond2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "polars>=0.20",
]

[project.optional-dependencies]
tables = ["great_tables>=0.10"]
plots = ["matplotlib>=3.7"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.24"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.8",
    "great_tables>=0.10",
    "matplotlib>=3.7",
    # pyarrow is needed for polars↔pandas interop tests. Library users who
    # only ever pass polars frames don't need it, so it's not a hard dep.
    "pyarrow>=15",
]
all = ["great_tables>=0.10", "matplotlib>=3.7"]

[project.urls]
Documentation = "https://github.com/Leotaby/dynapanel#readme"
Repository = "https://github.com/Leotaby/dynapanel"
Issues = "https://github.com/Leotaby/dynapanel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dynapanel"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/docs", "/README.md", "/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# We keep ruff's check intentionally light for v0.1 — focused on real bugs
# (E, F, W, I) plus modern-syntax upgrades (UP) and likely-bugs (B).
# Stylistic / opinionated rule families (RUF, SIM, PT) are off because they
# flag things like Greek letters in math comments as "ambiguous unicode",
# which is exactly what we want them for.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by formatter; occasional long line is fine
    "B008",   # function call in default arg — sometimes we want that
    "B905",   # zip() without strict= — too noisy, not a real bug source here
    "B007",   # unused loop variable — happens in zip/enumerate patterns we want
    "E741",   # ambiguous variable name (e.g. "l" for length) — we use l, L, etc. with intent
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
# We're not going full strict here — empirical econ code has too much np.ndarray-of-mystery-shape.
ignore_missing_imports = true
